kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: api
      containers:
      - name: api
        image: eu.gcr.io/harmelodic-images/main:v0
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: 0.2Gi
            cpu: 500m
          limits:
            memory: 0.5Gi
            cpu: "1"
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 60
          httpGet:
            port: 8081
            path: /health
        livenessProbe:
          initialDelaySeconds: 300
          periodSeconds: 30
          httpGet:
            port: 8081
            path: /health
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
