kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
