kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt # Will generate Certificate
spec:
  ingressClassName: main
  rules:
  - host: flavour101.com
    http:
      paths:
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: api
              port:
                name: http
  - host: "*.flavour101.com"
    http:
      paths:
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: api
              port:
                name: http
  tls:
  - hosts:
    - "*.flavour101.com"
    - flavour101.com
    secretName: tls-cert-wildcard-flavour101 # Secret will be auto-generated by cert-manager
